fix: icon image stretch

--- a/src/main/stylesheet/home.scss
+++ b/src/main/stylesheet/home.scss
@@ -73,8 +73,8 @@ body {
   }
 
   img {
-    height: 256px;
-    width: fit-content;
+    width: min(266px, 100%) ;
+    object-fit: contain;
   }
 
   .introduction {
